--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261580507654838%22%3A%22NQ9VGaAK%22%7D",
+        "value": "%7B%22100022361625806%22%3A%22sLHULPWX%22%2C%2261568797042346%22%3A%22QN8wsuf8%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.376Z",
-        "lastAccessed": "2025-09-18T03:50:45.376Z"
+        "creation": "2025-10-14T10:37:35.473Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.376Z",
-        "lastAccessed": "2025-09-18T03:50:45.376Z"
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     },
     {
         "key": "sb",
@@ -23,26 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.376Z",
-        "lastAccessed": "2025-09-18T03:50:45.376Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.376Z",
-        "lastAccessed": "2025-09-18T03:50:45.376Z"
-    },
-    {
-        "key": "pas",
-        "value": "61580507654838%3ATUQBij2WlR",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.376Z",
-        "lastAccessed": "2025-09-18T03:50:45.376Z"
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     },
     {
         "key": "vpd",
@@ -50,61 +32,88 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.377Z",
-        "lastAccessed": "2025-09-18T03:50:45.377Z"
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     },
     {
-        "key": "dpr",
-        "value": "2",
+        "key": "ps_l",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.377Z",
-        "lastAccessed": "2025-09-18T03:50:45.377Z"
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
+    },
+    {
+        "key": "pas",
+        "value": "61580507654838%3ATUQBij2WlR%2C100022361625806%3A7D47skGCEH%2C61577836434406%3AlfmZVN0iuJ%2C61581130904436%3AeB3NRpGIUF%2C61568373578081%3AcVV1qXHwMQ%2C61568314300390%3ATy3b8Cjcyj%2C61568525881627%3AOIHqnaQdo7%2C61568797042346%3A0wae8u6b1c",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     },
     {
         "key": "c_user",
-        "value": "61580507654838",
+        "value": "61568797042346",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.377Z",
-        "lastAccessed": "2025-09-18T03:50:45.377Z"
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     },
     {
         "key": "xs",
-        "value": "36%3ABmU5Go8CrVxy9Q%3A2%3A1758165942%3A-1%3A-1",
+        "value": "34%3AaR5OlbFbjWNDIg%3A2%3A1759688281%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.377Z",
-        "lastAccessed": "2025-09-18T03:50:45.377Z"
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     },
     {
         "key": "fr",
-        "value": "0iGjoyE0AEXVo8gmh.AWe3cP3lxffOUUth_DMG3SnjYUtwFS_QU9N9vMILG3bP1n1xSQo.BoyaDg..AAA.0.0.Boy4Ex.AWfu-WMxx5E2RMAkTvIomGgzxRE",
+        "value": "0iGjoyE0AEXVo8gmh.AWcW8DmhUBrLby-qqWg2MZ1sI-pLzWNaurL3AFPr8-Ij4Tj_0qA.BoyaDg..AAA.0.0.Bo7TcV.AWdzyjyic-VPqcWaz_nwrM58zkk",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.377Z",
-        "lastAccessed": "2025-09-18T03:50:45.377Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101628704%3BT%3A29302789",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.377Z",
-        "lastAccessed": "2025-09-18T03:50:45.377Z"
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2926%3Btimestamp%3A1758167345",
+        "value": "v2%3Bclient_version%3A2954%3Btimestamp%3A1760437880",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-18T03:50:45.377Z",
-        "lastAccessed": "2025-09-18T03:50:45.377Z"
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100417935%3BT%3A29340634",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-14T10:37:35.478Z",
+        "lastAccessed": "2025-10-14T10:37:35.478Z"
     }
 ]
