--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.916Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.318Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.918Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.918Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.918Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.918Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.918Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.918Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "c_user",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.918Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "xs",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.918Z",
-        "lastAccessed": "2025-10-15T02:43:45.918Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "locale",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.919Z",
-        "lastAccessed": "2025-10-15T02:43:45.919Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "fr",
-        "value": "0iGjoyE0AEXVo8gmh.AWcW8DmhUBrLby-qqWg2MZ1sI-pLzWNaurL3AFPr8-Ij4Tj_0qA.BoyaDg..AAA.0.0.Bo7TcV.AWdzyjyic-VPqcWaz_nwrM58zkk",
+        "value": "0iGjoyE0AEXVo8gmh.AWe4u955BDx8iH0-bwO3TRFx4gdUe-mjaCfMRL-T0YTQzndto0w.BoyaDg..AAA.0.0.Bo7wpr.AWcYCmHWL6xpa89q8QA7oQzwAaM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.920Z",
-        "lastAccessed": "2025-10-15T02:43:45.920Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2954%3Btimestamp%3A1760437880",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.920Z",
-        "lastAccessed": "2025-10-15T02:43:45.920Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     },
     {
         "key": "fbl_st",
-        "value": "100417935%3BT%3A29340634",
+        "value": "100425784%3BT%3A29341604",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-15T02:43:45.920Z",
-        "lastAccessed": "2025-10-15T02:43:45.920Z"
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2954%3Btimestamp%3A1760496235",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-15T10:00:08.319Z",
+        "lastAccessed": "2025-10-15T10:00:08.319Z"
     }
 ]
