--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100022361625806%22%3A%22ygJXUqVS%22%7D",
+        "value": "%7B%22100022361625806%22%3A%22ygJXUqVS%22%2C%2261568531281550%22%3A%22IxAoDK9m%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.291Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.546Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x760",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "c_user",
@@ -77,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "xs",
-        "value": "16%3ASQ_XSHx18gl-6g%3A2%3A1760630746%3A-1%3A-1",
+        "value": "18%3Am8xYQWFYt3FOHg%3A2%3A1760702431%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "fr",
-        "value": "0iGjoyE0AEXVo8gmh.AWeBqb6Xx6NAOTEgCxzYp8gA0buPwa7O6SWQa3UzshHXrKKDnTQ.BoyaDg..AAA.0.0.Bo8dl6.AWdZt1UKqCen3sObHlswsWM1Bec",
+        "value": "0iGjoyE0AEXVo8gmh.AWdIHw7kVGA6-pIoanJNR2DtkJhhKYREsqCITb1xdcYUi5H_V7Y.BoyaDg..AAA.0.0.Bo8i_j.AWezPrRlyUzz7biBSW9WKJzrayM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101532385%3BT%3A29344671",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2957%3Btimestamp%3A1760680314",
+        "value": "v2%3Bclient_version%3A2957%3Btimestamp%3A1760702435",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T05:52:07.292Z",
-        "lastAccessed": "2025-10-17T05:52:07.292Z"
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101621203%3BT%3A29345040",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-17T12:00:46.547Z",
+        "lastAccessed": "2025-10-17T12:00:46.547Z"
     }
 ]
