--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100022361625806%22%3A%22ygJXUqVS%22%2C%2261568531281550%22%3A%22IxAoDK9m%22%7D",
+        "value": "%7B%22100022361625806%22%3A%22ygJXUqVS%22%2C%2261568531281550%22%3A%22toJHJh8o%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.546Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.104Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "xs",
-        "value": "18%3Am8xYQWFYt3FOHg%3A2%3A1760702431%3A-1%3A-1",
+        "value": "38%3Aa9YtdazD8c61hA%3A2%3A1760716301%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "fr",
-        "value": "0iGjoyE0AEXVo8gmh.AWdIHw7kVGA6-pIoanJNR2DtkJhhKYREsqCITb1xdcYUi5H_V7Y.BoyaDg..AAA.0.0.Bo8i_j.AWezPrRlyUzz7biBSW9WKJzrayM",
+        "value": "0iGjoyE0AEXVo8gmh.AWdXtn5BV1NFtM3qiKbq0chTj0fkclgGlE_TR13QuhhUtJegCwg.BoyaDg..AAA.0.0.Bo8mYO.AWcdsHXEsfUY_Chzn1_-FHlV1dQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2957%3Btimestamp%3A1760702435",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     },
     {
         "key": "fbl_st",
-        "value": "101621203%3BT%3A29345040",
+        "value": "100421547%3BT%3A29345271",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T12:00:46.547Z",
-        "lastAccessed": "2025-10-17T12:00:46.547Z"
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2957%3Btimestamp%3A1760716302",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-17T15:51:47.105Z",
+        "lastAccessed": "2025-10-17T15:51:47.105Z"
     }
 ]
