--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.104Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.497Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "pas",
@@ -68,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x760",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "c_user",
@@ -95,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "xs",
@@ -104,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "fr",
-        "value": "0iGjoyE0AEXVo8gmh.AWdXtn5BV1NFtM3qiKbq0chTj0fkclgGlE_TR13QuhhUtJegCwg.BoyaDg..AAA.0.0.Bo8mYO.AWcdsHXEsfUY_Chzn1_-FHlV1dQ",
+        "value": "0iGjoyE0AEXVo8gmh.AWc6mtCzm0UXRay28aAN51a5j9-wltSTxxvt_0LkguH9LY9gXmI.BoyaDg..AAA.0.0.Bo8wBp.AWdd3lB8k7LIV2gR2LXwxNsnpBA",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "fbl_st",
-        "value": "100421547%3BT%3A29345271",
+        "value": "100637834%3BT%3A29345930",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2957%3Btimestamp%3A1760716302",
+        "value": "v2%3Bclient_version%3A2958%3Btimestamp%3A1760755817",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-17T15:51:47.105Z",
-        "lastAccessed": "2025-10-17T15:51:47.105Z"
+        "creation": "2025-10-18T02:50:33.498Z",
+        "lastAccessed": "2025-10-18T02:50:33.498Z"
     }
 ]
